<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    >

    <ImageView
        android:id="@+id/image_college_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/college_logo"/>

    <Button
        android:id="@+id/btn_librarian_login_home_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_librarian_login"/>

    <Button
        android:id="@+id/btn_student_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_student_login"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/textview_new_here_please_sign_up" />

    <Button
        android:id="@+id/btn_student_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_student_sign_up"/>




</LinearLayout>