<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LibrarianLoginActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <ImageView
        android:id="@+id/image_admin_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/librarian_login"

        />
    <EditText
        android:id="@+id/librarian_login_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_border"
        android:padding="10dp"
        android:inputType="text"
        android:hint="@string/librarian_id"/>
    <EditText
        android:id="@+id/librarian_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_border"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        android:inputType="textPassword"
        android:hint="@string/librarian_password"/>

    <Button
        android:id="@+id/btn_librarian_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_librarian_login"
        android:layout_marginTop="10dp"
        />


</LinearLayout>